--- a/css/header.css
+++ b/css/header.css
@@ -40,6 +40,14 @@
     /* font-size: 36px; */
   }
   
+
+.sidenav ul,
+ .sidenav ul li{
+  background:transparent;
+  list-style: none;
+  text-align: left;
+}
+
 .switch-cross{
   display: flex;
   justify-content: space-around;
