--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 @import url('/Portafolio/css/3dbackground.css');
 @import url('/Portafolio/css/monitor.css');
 @import url('/Portafolio/css/animar.css');
+@import url('/Portafolio/css/drop.css');
 
 
 *{
