--- a/layout/calculator.html
+++ b/layout/calculator.html
@@ -39,13 +39,15 @@
 
         <script src="/Portafolio/js/switchMode.js"></script>
 
-        <a href="/Portafolio/index.html">Sobre Mi</a>
-        <a href="/Portafolio/layout/calculator.html">Calculadora</a>
-        <a href="/Portafolio/layout/gallery.html">Galeria</a>
-        <a href="/Portafolio/layout/listado.html">Listado</a>
-        <a href="/Portafolio/layout/3d.html">3D(only desktop) </a>
-        <a href="/Portafolio/layout/3dbackground.html">No hay vuelta atras</a>
-        <a href="/Portafolio/layout/formulario.html">Contacto</a>
+        <ul>
+            <li><a href="/Portafolio/index.html">Sobre Mi</a></li>
+            <li><a href="/Portafolio/layout/calculator.html">Calculadora</a></li>
+            <li><a href="/Portafolio/layout/gallery.html">Galeria</a></li>
+            <li><a href="/Portafolio/layout/listado.html">Listado</a></li>
+            <li><a href="/Portafolio/layout/3d.html">3D(only desktop) </a></li>
+            <li><a href="/Portafolio/layout/3dbackground.html">No hay vuelta atras</a></li>
+            <li><a href="/Portafolio/layout/formulario.html">Contacto</a></li>
+        </ul>
 
 
     </div>
