--- a/css/list.css
+++ b/css/list.css
@@ -13,14 +13,14 @@
   }
   
   
-  ul {
+  .div-listado  ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
   }
   
   /* Style the list items */
-  ul li {
+  .div-listado  ul li {
     cursor: pointer;
     position: relative;
     padding: 12px 8px 12px 40px;
@@ -36,24 +36,24 @@
   }
   
   /* Set all odd list items to a different color (zebra-stripes) */
-  ul li:nth-child(odd) {
+  .div-listado ul li:nth-child(odd) {
     background: #f9f9f9;
   }
   
   /* Darker background-color on hover */
-  ul li:hover {
+  .div-listado ul li:hover {
     background: #ddd;
   }
   
   /* When clicked on, add a background color and strike out text */
-  ul li.checked {
+  .div-listado ul li.checked {
     background: #888;
     color: #fff;
     text-decoration: line-through;
   }
   
   /* Add a "checked" mark when clicked on */
-  ul li.checked::before {
+  .div-listado ul li.checked::before {
     content: '';
     position: absolute;
     border-color: #fff;
@@ -67,14 +67,14 @@
   }
   
   /* Style the close button */
-  .close {
+  .div-listado .close {
     position: absolute;
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
   }
   
-  .close:hover {
+  .div-listado .close:hover {
     background-color: #36d8f4;
     color: white;
   }
