--- a/css/monitor.css
+++ b/css/monitor.css
@@ -58,7 +58,7 @@
         font-size: 3rem;
         color: aliceblue;
         text-shadow: 0.1rem 0.1rem 0.2rem rgb(126, 126, 126);
-        
+        text-align: center;
 
     }
 
