--- a/css/presentacion-1.css
+++ b/css/presentacion-1.css
@@ -72,9 +72,11 @@
 
 .card-1{
     min-width: 50%;
-    background: linear-gradient(-25deg,rgba(0, 0, 0, 0.2),rgba(255, 255, 255, 0.2));
+    background: linear-gradient(-25deg,rgba(124, 124, 124, 0.5)
+    ,rgba(255, 255, 255, 0.5));
     backdrop-filter: blur(1rem);
     -webkit-backdrop-filter: blur(1rem);
+    /* -webkit-filter: blur(1rem); */
     box-shadow:5px 5px 9px 1px rgba(255, 255, 255, 0.459)
     ,inset 2px 2px 3px 2px rgb(255, 255, 255)
     ;
@@ -108,7 +110,7 @@
         width: 0;
     }
     to {
-        width: 15rem;
+        width: 16rem;
     }
 }
   
