--- a/css/3d.css
+++ b/css/3d.css
@@ -20,7 +20,7 @@
     margin: auto;
     min-width: 20rem;
     max-width: 85rem;
-    height: 70vh;
+    height: auto;
     background:linear-gradient(120deg
     , rgba(0, 183, 255, 0.15)
     , rgba(14, 135, 184, 0.15)
@@ -41,11 +41,16 @@
   .one {
     grid-column: 1 ;
     grid-row: 1;
+    transform-style: preserve-3d;
+    
+    /* display: flex;
+    align-items: center;
+    justify-content: center; */
   }
   .glitch1 {
     position: absolute;
-    /* top: 2rem; */
-     left: 25%; 
+
+    padding-left: 4.3rem;
     text-align: center;
     color: rgb(0, 0, 0);
     text-shadow: 0 0 0 rgba(0, 0, 0, 0);
@@ -62,7 +67,18 @@
     
     animation: glitch1 2.5s infinite;
   }
+  .glitch1:nth-child(2) {
+    color: #67f3da;
+    animation: glitch2 2.5s infinite;
+    padding-left: 4.3rem;
+    
+  }
   
+  .glitch1:nth-child(3) {
+    color: #f16f6f;
+    animation: glitch3 2.5s infinite;
+    padding-left: 4.3rem;
+  }
 
   .two {
 
@@ -83,12 +99,24 @@
   .three {
 
     grid-column: 1/3;
-    grid-row: 2 / 5;
+    grid-row: 2/ 4;
+    height: auto;
   }
+
+  .port{
+    /* position: relative; */
+    width: 100%;
+    height: 100%;
+    border: solid 0.1rem rgb(255, 255, 255);
+    /* resize: both; */
+    border-radius: 2rem;
+  
+  }  
+
   .four {
 
     grid-column: 3;
-    grid-row: 3/5;
+    /* grid-row: 3/4; */
   }
 
   .container-conic-loader{
@@ -128,31 +156,33 @@ color: rgb(0, 0, 0);
     grid-row: 2/4;
   }
 
-  .center{
-    border-radius: 2rem;
-    /* overflow: hidden; */
-      text-align: center;
-      display: grid;
-      align-items:center;
-      word-break: break-all;
-      padding: 0.3rem;
-      backdrop-filter: blur(0.2rem);
-      background:linear-gradient(-45deg
-      ,rgba(255, 255, 255, 0.2)
-      ,rgba(255, 255, 255, 0.2));
+.center{
+border-radius: 2rem;
+transform-style: preserve-3d;
+overflow: visible;
+text-align: center;
+display: grid;
+align-items:center;
+word-break: normal;
+padding: 0.3rem;
+backdrop-filter: blur(0.2rem);
+background:linear-gradient(-45deg
+,rgba(255, 255, 255, 0.2)
+,rgba(255, 255, 255, 0.2));
+}
+.center:hover{
+border:solid 0.3rem white;
+box-shadow: 0 0 2rem yellow;
+transform:
+translate3d(-10rem,0rem,10rem) 
+rotateY(-35deg) 
+scale3d(1.2,1.2,1)
+;
+transform-style: preserve-3d;
+transition: 2s;
+overflow: visible;
 
-  }
-  .center:hover{
-        border:solid 0.3rem white;
-        box-shadow: 0 0 2rem yellow;
-        transform:
-         translate3d(-3rem,0,9rem)
-         /* rotateY(-30deg) */
-         /* scale3d(1.2,1.2,1) */
-         ;
-        transform-style: preserve-3d;
-        transition: 2s;
-  }
+}
 /* 
   .center:active{
    
@@ -168,15 +198,7 @@ color: rgb(0, 0, 0);
 
 
 
-.port{
-  /* position: relative; */
-  width: 100%;
-  height: 30rem;
-  border: solid 0.1rem rgb(255, 255, 255);
-  /* resize: both; */
-  border-radius: 2rem;
 
-}  
 
 @media (min-width:100px) and (max-width:700px){
 
@@ -205,7 +227,7 @@ color: rgb(0, 0, 0);
   color: aliceblue;
   position: absolute;
   top: 5rem;
-  left:50%;
+  /* left:50%; */
 }
 
   .wrapper-3d {
@@ -230,12 +252,13 @@ color: rgb(0, 0, 0);
   .one {
     grid-column: 1 ;
     grid-row: 1;
+    padding-left: 2rem;
   }
 
   .glitch1 {
-    position: absolute;
+    /* position: absolute; */
     /* top: 2rem; */
-     left: 22%; 
+     /* left: 22%;  */
     text-align: center;
     font-size: 1rem;
     text-shadow: 0.15rem 0.15rem 0 rgba(0, 0, 0, 0.25);
@@ -243,13 +266,25 @@ color: rgb(0, 0, 0);
     font-family: 'Press Start 2P';
     font-weight: 400;
     /*Create overlap*/
-    
+    padding-left: 2.25rem;
     margin: auto;
     /* line-height: 0; */
     /*Animation*/
     
     animation: glitch1 2.5s infinite;
   }
+
+  .glitch1:nth-child(2) {
+    color: #67f3da;
+    animation: glitch2 2.5s infinite;
+    padding-left: 2.25rem;    
+  }
+  
+  .glitch1:nth-child(3) {
+    color: #f16f6f;
+    animation: glitch3 2.5s infinite;
+    padding-left: 2.25rem;  }
+
 
   .two {
     grid-column: 1 / 3;
@@ -303,7 +338,7 @@ color: rgb(0, 0, 0);
         text-align: center;
         display: grid;
         align-items:center;
-        word-break: break-all;
+        word-break: normal;
         padding: 0.3rem;
   
     }
@@ -380,16 +415,16 @@ color: rgb(0, 0, 0);
   }
 
   .glitch1 {
-    position: absolute;
+    /* position: absolute; */
     /* top: 2rem; */
-    left: 20%; 
+    /* left: 20%;  */
     text-align: center;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
     font-family: 'Press Start 2P';
     font-weight: 400;
     /*Create overlap*/
-    
+    padding-left: 2.6rem;
     margin: auto;
     /* line-height: 0; */
     /*Animation*/
@@ -397,6 +432,18 @@ color: rgb(0, 0, 0);
     animation: glitch1 2.5s infinite;
   }
 
+  .glitch1:nth-child(2) {
+    color: #67f3da;
+    animation: glitch2 2.5s infinite;
+    padding-left: 2.6rem;
+    
+  }
+  
+  .glitch1:nth-child(3) {
+    color: #f16f6f;
+    animation: glitch3 2.5s infinite;
+    padding-left: 2.6rem;
+  }
 
 
   .two {
@@ -468,7 +515,7 @@ color: aliceblue;
       text-align: center;
       display: grid;
       align-items:center;
-      word-break: break-all;
+      word-break: normal;
       padding: 0.3rem;
 
   }
