--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 @import url('/Portafolio/css/monitor.css');
 @import url('/Portafolio/css/animar.css');
 @import url('/Portafolio/css/drop.css');
+@import url('/Portafolio/css/presentacion-4.css');
 
 
 *{
