--- a/layout/3d.html
+++ b/layout/3d.html
@@ -60,6 +60,14 @@
 
     <script type="text/javascript" src="/Portafolio/js/sidebar.js"></script>
 
+
+    <div class="video-fondo">
+        <video autoplay loop muted>
+            <source src="/Portafolio/img/loop.mp4" type="video/mp4">
+        </video>
+    </div>
+
+
     <div class="container-3d animado-inicio">
 
         <div class="wrapper-3d ">
@@ -67,7 +75,7 @@
                 <h1 class="glitch1" >Portafolio </br> en 3D</h1>
                 <h1 class="glitch1" >Portafolio</br> en 3D</h1>
                 <h1 class="glitch1" >Portafolio </br>en 3D</h1>
-                <!-- <p>Just why I can</p> -->
+                
             </div>
             <div class="two center">
                 <h1>Cubo Rubik</h1>
@@ -154,14 +162,9 @@
 
             </div>
             <div class="five center"><a href="/Portafolio/index.html">Volver al Inicio</a></div>
-            <!-- <div class="six center">
-                <h1>Six</h1>
-                <p>six</p>
-            </div> -->
-            <!-- <div class="seven center"><h1>Seven</h1></div> -->
-
         </div>
     </div>
+  
    
     <footer class="footer">
         
