--- a/css/3d.css
+++ b/css/3d.css
@@ -9,6 +9,44 @@
     perspective: 2000px;
     overflow: visible;
 }
+
+.video-fondo{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  /* background: red; */
+  
+}
+
+.video-fondo:before{
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: rgba(255, 38, 38, 0.9);
+  mix-blend-mode:color;
+  z-index: 0;
+  animation: hue-rotate 10s infinite;
+  filter: hue-rotate(360deg);
+
+}
+
+@keyframes hue-rotate{
+  0%{
+    filter: hue-rotate(0);
+  }100%{
+    filter: hue-rotate(360deg);
+  }
+}
+
+.video-fondo video{
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+  background-attachment: fixed;
+  opacity: 1;
+}
+
 /* .titlee{
   color: aliceblue;
   position: absolute;
@@ -16,22 +54,22 @@
   left:50%;
 } */
 .wrapper-3d {
-    border-radius: 2rem;
+    border-radius: 0.5rem;
     margin: auto;
     min-width: 20rem;
     max-width: 85rem;
     height: auto;
     background:linear-gradient(120deg
-    , rgba(0, 183, 255, 0.15)
-    , rgba(14, 135, 184, 0.15)
-    , rgba(37, 86, 105, 0.15)
+    , rgba(255, 255, 255, 0.548)
+    , rgba(128, 219, 255, 0.65)
+    , rgba(255, 255, 255, 0.76)
     );
-    box-shadow: 0 0 0.35rem white;
+    box-shadow: 0 0 3rem white;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
     padding: 0.5rem;
-    /* border: solid 0.3rem black; */
+    border: solid 0.1rem rgb(255, 255, 255);
     grid-auto-rows: minmax(4rem, auto);
     transform-style: preserve-3d;
       
@@ -157,7 +195,7 @@ color: rgb(0, 0, 0);
   }
 
 .center{
-border-radius: 2rem;
+border-radius: 0.5rem;
 transform-style: preserve-3d;
 overflow: visible;
 text-align: center;
@@ -165,12 +203,16 @@ display: grid;
 align-items:center;
 word-break: normal;
 padding: 0.3rem;
-backdrop-filter: blur(0.2rem);
-background:linear-gradient(-45deg
-,rgba(255, 255, 255, 0.2)
+backdrop-filter: blur(0.5rem);
+background:radial-gradient(-45deg
+,rgba(255, 255, 255, 0.5)
 ,rgba(255, 255, 255, 0.2));
+border:solid 0.1rem white;
 }
+
 .center:hover{
+  /* backdrop-filter: blur(0.5rem); */
+background:rgba(255, 255, 255, 0.507);
 border:solid 0.3rem white;
 box-shadow: 0 0 2rem yellow;
 transform:
@@ -206,12 +248,14 @@ overflow: visible;
     /* background: radial-gradient(rgb(0, 0, 0),rgb(36, 36, 36),rgb(34, 34, 34)); */
     /* padding-right: 5vw; */
     /* margin-right: 15vw ; */
-    display: grid;
-    align-items: center;
+
+    
+    /* display: grid; */
+    /* align-items: center; */
     height: 100vh;
     perspective: 2000px;
-    overflow: visible;
-    margin-bottom: 65rem;
+    overflow: scroll;
+    /* margin-bottom: 65rem; */
 }
 
 
